[workspace]
resolver = "2"

members = [
    "axorigin",
    "axhal",
    "axconfig",
    "spinlock",
    "axsync",
    "page_table",
    "axalloc",
    "axruntime",
    "axstd",
    "axlog",
    "axdtb",
    "bitmap_allocator",
    "linked_list",
    "buddy_allocator",
]

[profile.release]
lto = true
