[package]
name = "allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axconfig = { path = "../axconfig" }
bitmap-allocator = { path = "../bitmap-allocator" }
buddy_system_allocator = { path = "../buddy_system_allocator", default-features = false }
