[package]
name = "axalloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axconfig = { path = "../axconfig" }
axsync = { path = "../axsync" }
spinlock = { path = "../spinlock" }
bitmap_allocator = { path = "../bitmap_allocator" }
buddy_allocator = { path = "../buddy_allocator" }
