[package]
name = "axruntime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = ["dep:axalloc"]
paging = ["axhal/paging"]

[dependencies]
axhal = { path = "../axhal" }
axlog = { path = "../axlog" }
axdtb = { path = "../axdtb" }
crate_interface = { path = "../crate_interface" }
axalloc = { path = "../axalloc", optional = true }
axsync = { path = "../axsync" }
axtask = { path = "../axtask" }
