[package]
name = "axruntime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig" }
axlog = { path = "../axlog" }
axdtb = { path = "../axdtb" }
crate_interface = { path = "../crate_interface" }
axalloc = { path = "../axalloc" }
axsync = { path = "../axsync" }
page_table = { path = "../page_table" }
axtask = { path = "../axtask" }
#kernel_guard = { path = "../kernel_guard" }
