[package]
name = "axruntime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axhal = { path = "../axhal" }
axalloc = { path = "../axalloc" }
axlog = { path = "../axlog" }
axdtb = { path = "../axdtb" }
axconfig = { path = "../axconfig" }
