[package]
name = "axstd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
alloc = ["axruntime/alloc"]
paging = ["axruntime/paging"]

[dependencies]
spinlock = { path = "../spinlock" }
axhal = { path = "../axhal" }
axruntime = { path = "../axruntime" }
axerrno = { path = "../axerrno" }
axconfig = { path = "../axconfig" }
axtask = { path = "../axtask" }
