[package]
name = "axtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig" }
axsync = { path = "../axsync" }
spinlock = { path = "../spinlock" }
kernel_guard = { path = "../kernel_guard" }
crate_interface = { path = "../crate_interface" }
